test/typeerrors/ex14.golden
Building file ../test/typeerrors/ex14.act
  Compiling ex14.act for release

ERROR: Error when compiling ex14 module: Type error
 2:12-15
  |
2 |    return g(x)
  |           ^^^^
Too few positional arguments in call

